--- a/GameData/RATPack/Parts/TRs/ThrustReverse.cfg
+++ b/GameData/RATPack/Parts/TRs/ThrustReverse.cfg
@@ -46,7 +46,9 @@ PART
 
 			PREFAB_PARTICLE
 			{
-				prefabName = fx_smokeTrail_light
+				//prefabName = fx_smokeTrail_light
+
+				prefabName = fx_smokeTrail_aeroSpike		
 				transformName = smokePoint.1
 				emission = 0.0 0.0
 				emission = 0.05 0.0
