Updated version file to use github for new version info
	Localization of mod

--- a/GameData/RATPack/Parts/LEST/LES.cfg
+++ b/GameData/RATPack/Parts/LEST/LES.cfg
@@ -10,9 +10,9 @@ PART
 	cost = 600
 	category = Utility
 	subcategory = 0
-	title = LEST-1 "Oops" LES Trigger
-	manufacturer = SatNet Aerospace Inc
-	description = Launch Escape System Trigger. Detects a catastrophic rocket failure just in time to trigger an abort. Warranty void if actually used. 
+	title = #LOC_RAT_78
+	manufacturer = #LOC_RAT_79
+	description = #LOC_RAT_80
 	attachRules = 0,1,0,0,1
 	mass = 0.2
 	dragModelType = default
