--- a/GameData/RATPack/Parts/RATs/BasicRat.cfg
+++ b/GameData/RATPack/Parts/RATs/BasicRat.cfg
@@ -10,9 +10,9 @@ PART
 	cost = 60
 	category = Utility
 	subcategory = 0
-	title = RAT-1 "Pinwheel" Ram Air Turbine
-	manufacturer = SatNet Aerospace Inc
-	description = A basic Ram Air Turbine that will generate power from airflow. This basic unit must be activated manually. Cheap and light they are often used to generate power for SRBs and engines that don't have an alternator. 
+	title = #LOC_RAT_81
+	manufacturer = #LOC_RAT_79
+	description = #LOC_RAT_82
 	attachRules = 0,1,0,0,1
 	mass = 0.02
 	dragModelType = default
