--- a/GameData/RATPack/Parts/RATs/RatCone.cfg
+++ b/GameData/RATPack/Parts/RATs/RatCone.cfg
@@ -11,9 +11,9 @@ PART
 	cost = 200
 	category = Utility
 	subcategory = 0
-	title = RAT-720 "Topper" Ram Air Turbine
-	manufacturer = SatNet Aerospace Inc
-	description = Designed to go on top of a rocket instead of radially, this Ram Air Turbine is popular for aerial probes. Peak power is much higher than previous models due to its larger size.
+	title = #LOC_RAT_87
+	manufacturer = #LOC_RAT_79
+	description = #LOC_RAT_88
 	attachRules = 1,1,1,1,0
 	mass = 0.05
 	dragModelType = default
