--- a/GameData/RATPack/Parts/TAWS/TAWS.cfg
+++ b/GameData/RATPack/Parts/TAWS/TAWS.cfg
@@ -10,9 +10,9 @@ PART
 	cost = 600
 	category = Utility
 	subcategory = 0
-	title = TAWS-1 "Lookout" Warning System
-	manufacturer = SatNet Aerospace Inc
-	description = Provides advance warning before you hit the ground. 
+	title = #LOC_RAT_89
+	manufacturer = #LOC_RAT_79
+	description = #LOC_RAT_90
 	attachRules = 0,1,0,0,1
 	mass = 0.2
 	dragModelType = default
