--- a/GameData/RATPack/Parts/TAWS/TRS.cfg
+++ b/GameData/RATPack/Parts/TAWS/TRS.cfg
@@ -10,9 +10,9 @@ PART
 	cost = 600
 	category = Utility
 	subcategory = 0
-	title = TRS-1 "Lookdown" Terrain Radar
-	manufacturer = SatNet Aerospace Inc
-	description = A terrain radar that scans the ground so you can pick and ideal landing spot. 
+	title = #LOC_RAT_91
+	manufacturer = #LOC_RAT_79
+	description = #LOC_RAT_92
 	attachRules = 0,1,0,0,1
 	mass = 0.2
 	dragModelType = default
