--- a/GameData/RATPack/Parts/TRs/ThrustReverse.cfg
+++ b/GameData/RATPack/Parts/TRs/ThrustReverse.cfg
@@ -12,9 +12,9 @@ PART
 	cost = 150
 	category = Utility
 	subcategory = 0
-	title = TR-1 "Backup" Thrust Reverser
-	manufacturer = SatNet Aerospace
-	description = Redirects thrust in the opposite direction. We've been assured that the exhaust fumes directed back towards the cabin are mostly harmless... as long as you're wearing a sealed space suit.
+	title = #LOC_RAT_93
+	manufacturer = #LOC_RAT_94
+	description = #LOC_RAT_95
 	attachRules = 1,1,1,1,0
 	mass = 0.0625
 	dragModelType = default
