--- a/GameData/RATPack/Parts/TRs/ThrustReverseLong.cfg
+++ b/GameData/RATPack/Parts/TRs/ThrustReverseLong.cfg
@@ -12,9 +12,9 @@ PART
 	cost = 150
 	category = Utility
 	subcategory = 0
-	title = TR-L "Way Back" Thrust Reverser
-	manufacturer = SatNet Aerospace
-	description = This thrust reverser can redirect thrust of longer engines with ease. The manufacturer has reminded us (mostly Jeb) not to fly in reverse.
+	title = #LOC_RAT_96
+	manufacturer = #LOC_RAT_94
+	description = #LOC_RAT_97
 	attachRules = 1,1,1,1,0
 	mass = 0.0825
 	dragModelType = default
