--- a/GameData/RATPack/Parts/RATs/LargeRat.cfg
+++ b/GameData/RATPack/Parts/RATs/LargeRat.cfg
@@ -10,9 +10,9 @@ PART
 	cost = 600
 	category = Utility
 	subcategory = 0
-	title = RAT-6000 "Pack Master" Ram Air Turbine
-	manufacturer = SatNet Aerospace Inc
-	description = A highly advanced Ram Air Turbine. Supposedly created after one of the engineers was introduced to oragami, it folds up to conserve space. It deploys automatically when when a power loss is detected. It contains an internal battery that automatically enables to provide power while it deploys, ensuring near continous power.
+	title = #LOC_RAT_83
+	manufacturer = #LOC_RAT_79
+	description = #LOC_RAT_84
 	attachRules = 0,1,0,0,1
 	mass = 0.75
 	dragModelType = default
