--- a/GameData/RATPack/Parts/RATs/RadialRat.cfg
+++ b/GameData/RATPack/Parts/RATs/RadialRat.cfg
@@ -10,9 +10,9 @@ PART
 	cost = 140
 	category = Utility
 	subcategory = 0
-	title = RAT-360 "Cage Master" Ram Air Turbine
-	manufacturer = SatNet Aerospace Inc
-	description = A Ram Air Turbine with the ability to auto-activate when power is lost. Providing more power than earlier models you can almost power a coffee maker or SAS (sold separately). Built inside of an aerodynamic shell it takes a few seconds to deploy and provide power. Due to the aerodynamic shell it requires higher speeds and/or pressures to generate power, but isn't subject to power drop off above mach 1.
+	title = #LOC_RAT_85
+	manufacturer = #LOC_RAT_79
+	description = #LOC_RAT_86
 	attachRules = 0,1,0,0,1
 	mass = 0.04
 	dragModelType = default
